test/corpus/errors.txt
==================
array pairs require a comma separator (:error)
:error
==================

{a: 1 b: 2}

---

(document
  (expression
    (ERROR
      (pair
        key: (array_key)
        value: (number)))
    (array
      (pair
        key: (array_key)
        value: (number)))))
/tmp/err.fluid.html	Parse:    0.28 ms	    42 bytes/ms	(ERROR)
